--- a/content/MoM/base/mythos.ini
+++ b/content/MoM/base/mythos.ini
@@ -6,7 +6,7 @@ trigger=Mythos
 flags=#fire
 
 ; rank 1.125
-[PerilActionHeroRoll01]
+[PerilActionHeroRoll01Street]
 text={ffg:MYTHOS_EVENT_ACTION_HERO_ROLL_01}
 event1=PerilActionHeroRoll02
 button1="Resolve Event"
@@ -15,7 +15,7 @@ button2="No Effect"
 flags=mythosMinor mythosStreetCorner
 
 ; rank 1.125
-[PerilActionHeroRoll01]
+[PerilActionHeroRoll01Alley]
 text={ffg:MYTHOS_EVENT_ACTION_HERO_ROLL_01}
 event1=PerilActionHeroRoll02
 button1="Resolve Event"
@@ -292,7 +292,7 @@ event1=
 button1="Continue"
 
 ; rank 1.6
-[PerilConfinement01]
+[PerilConfinement01Alley]
 text={ffg:MYTHOS_EVENT_CONFINEMENT_01}
 event1=PerilConfinement02
 button1="Resolve Event"
@@ -301,7 +301,7 @@ button2="No Effect"
 flags=mythosMinor mythosAlley
 
 ; rank 1.6
-[PerilConfinement01]
+[PerilConfinement01Hall]
 text={ffg:MYTHOS_EVENT_CONFINEMENT_01}
 event1=PerilConfinement02
 button1="Resolve Event"
@@ -354,140 +354,171 @@ flags=mythosFlavor
 event1=
 button1="Continue"
 
+; rank 2.25
 [PerilDisorientingFall]
 text={ffg:MYTHOS_EVENT_DISORIENTING_FALL}
 flags=mythosMajor
 event1=
 button1="Continue"
 
+; rank 3
 [PerilDoYouEvenLift]
 text={ffg:MYTHOS_EVENT_DO_YOU_EVEN_LIFT}
 flags=mythosMajor
 event1=
 button1="Continue"
 
+; rank 3
 [PerilDyingLight01]
 text={ffg:MYTHOS_EVENT_DYING_LIGHT_01}
 event1=PerilDyingLight02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMajor mythosUnfinished
 
 [PerilDyingLight02]
 text={ffg:MYTHOS_EVENT_DYING_LIGHT_02}
 event1=
 button1="Continue"
 
+; rank 3.5
 [PerilEatenByAGrue01]
 text={ffg:MYTHOS_EVENT_EATEN_BY_A_GRUE_01}
 event1=PerilEatenByAGrue02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMajor mythosUnfinished
 
 [PerilEatenByAGrue02]
 text={ffg:MYTHOS_EVENT_EATEN_BY_A_GRUE_02}
 event1=
 button1="Continue"
 
+; rank 6
 [PerilEvilDarkness]
 text={ffg:MYTHOS_EVENT_EVIL_DARKNESS}
-flags=mythos
+flags=mythosDeadly
 event1=
 button1="Continue"
 
 [PerilEvilPresense]
 text={ffg:MYTHOS_EVENT_EVIL_PRESENSE}
-flags=mythos
+flags=mythosFlavor
 event1=
 button1="Continue"
 
+; rank 3
 [PerilEyesInTheDark]
 text={ffg:MYTHOS_EVENT_EYES_IN_THE_DARK}
-flags=mythos
+flags=mythosMajor mythosDarkness
 event1=
 button1="Continue"
 
+; rank 3.5
 [PerilFacemelt]
 text={ffg:MYTHOS_EVENT_FACEMELT}
-flags=mythosDeadly
+flags=mythosMajor
 event1=
 button1="Continue"
 
+; rank 2.45
 [PerilFallingBookcase01]
 text={ffg:MYTHOS_EVENT_FALLING_BOOKCASE_01}
 event1=PerilFallingBookcase02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMajor mythosLibrary
 
 [PerilFallingBookcase02]
 text={ffg:MYTHOS_EVENT_FALLING_BOOKCASE_02}
 event1=
 button1="Continue"
 
+; rank 1.05
 [PerilFallingDebris01]
 text={ffg:MYTHOS_EVENT_FALLING_DEBRIS_01}
 event1=PerilFallingDebris02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMinor mythosAlley
 
 [PerilFallingDebris02]
 text={ffg:MYTHOS_EVENT_FALLING_DEBRIS_02}
 event1=
 button1="Continue"
 
-[PerilFancyMeetingYouHere01]
+; rank 2.6
+[PerilFancyMeetingYouHere01Crypt]
 text={ffg:MYTHOS_EVENT_FANCY_MEETING_YOU_HERE_01}
 event1=PerilFancyMeetingYouHere02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMajor mythosCrypt
+
+; rank 2.6
+[PerilFancyMeetingYouHere01Graveyard]
+text={ffg:MYTHOS_EVENT_FANCY_MEETING_YOU_HERE_01}
+event1=PerilFancyMeetingYouHere02
+button1="Resolve Event"
+event2=
+button2="No Effect"
+flags=mythosMajor mythosGraveyard
+
+; rank 2.6
+[PerilFancyMeetingYouHere01Morgue]
+text={ffg:MYTHOS_EVENT_FANCY_MEETING_YOU_HERE_01}
+event1=PerilFancyMeetingYouHere02
+button1="Resolve Event"
+event2=
+button2="No Effect"
+flags=mythosMajor mythosMorgue
 
 [PerilFancyMeetingYouHere02]
 text={ffg:MYTHOS_EVENT_FANCY_MEETING_YOU_HERE_02}
 event1=
 button1="Continue"
 
+; rank 1.4
 [PerilFearMakesYouStupid01]
 text={ffg:MYTHOS_EVENT_FEAR_MAKES_YOU_STUPID_01}
 event1=PerilFearMakesYouStupid02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMinor
 
 [PerilFearMakesYouStupid02]
 text={ffg:MYTHOS_EVENT_FEAR_MAKES_YOU_STUPID_02}
 event1=
 button1="Continue"
 
+; rank 2
 [PerilFearOfTheDark01]
 text={ffg:MYTHOS_EVENT_FEAR_OF_THE_DARK_01}
 event1=PerilFearOfTheDark02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMajor mythosDarkness
 
 [PerilFearOfTheDark02]
 text={ffg:MYTHOS_EVENT_FEAR_OF_THE_DARK_02}
 event1=
 button1="Continue"
 
+; rank 0.375
 [PerilFearOfTheUnknown01]
 text={ffg:MYTHOS_EVENT_FEAR_OF_THE_UNKNOWN_01}
 event1=PerilFearOfTheUnknown02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMinor
 
 [PerilFearOfTheUnknown02]
 text={ffg:MYTHOS_EVENT_FEAR_OF_THE_UNKNOWN_02}
@@ -496,56 +527,60 @@ button1="Continue"
 
 [PerilFearSweat]
 text={ffg:MYTHOS_EVENT_FEAR_SWEAT}
-flags=mythos
+flags=mythosFlavor
 event1=
 button1="Continue"
 
+; rank 1
 [PerilFire01]
 text={ffg:MYTHOS_EVENT_FIRE_01}
 event1=PerilFire02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMinor #fire
 
 [PerilFire02]
 text={ffg:MYTHOS_EVENT_FIRE_02}
 event1=
 button1="Continue"
 
+; rank 4
 [PerilFireImps01]
 text={ffg:MYTHOS_EVENT_FIRE_IMPS_01}
 event1=PerilFireImps02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosDeadly
 
 [PerilFireImps02]
 text={ffg:MYTHOS_EVENT_FIRE_IMPS_02}
 event1=
 button1="Continue"
 
+; rank 2
 [PerilFireflies01]
 text={ffg:MYTHOS_EVENT_FIREFLIES_01}
 event1=PerilFireflies02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMajor mythosOutdoors
 
 [PerilFireflies02]
 text={ffg:MYTHOS_EVENT_FIREFLIES_02}
 event1=
 button1="Continue"
 
+; rank 3
 [PerilFitsOfRage01]
 text={ffg:MYTHOS_EVENT_FITS_OF_RAGE_01}
 event1=PerilFitsOfRage02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMajor
 
 [PerilFitsOfRage02]
 text={ffg:MYTHOS_EVENT_FITS_OF_RAGE_02}
@@ -554,356 +589,418 @@ button1="Continue"
 
 [PerilFlock]
 text={ffg:MYTHOS_EVENT_FLOCK}
-flags=mythos
+flags=mythosFlavor
 event1=
 button1="Continue"
 
 [PerilFootsteps]
 text={ffg:MYTHOS_EVENT_FOOTSTEPS}
-flags=mythos
+flags=mythosFlavor
 event1=
 button1="Continue"
 
+; rank 4
 [PerilFurnaceExplosion]
 text={ffg:MYTHOS_EVENT_FURNACE_EXPLOSION}
-flags=mythos
+flags=mythosMajor mythosUnfinished
 event1=
 button1="Continue"
 
+; rank 1.5
 [PerilGetIntoADoorway01]
 text={ffg:MYTHOS_EVENT_GET_INTO_A_DOORWAY_01}
 event1=PerilGetIntoADoorway02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMinor mythosUnfinished
 
 [PerilGetIntoADoorway02]
 text={ffg:MYTHOS_EVENT_GET_INTO_A_DOORWAY_02}
 event1=
 button1="Continue"
 
+; rank 3.5
 [PerilGhostlyBooks01]
 text={ffg:MYTHOS_EVENT_GHOSTLY_BOOKS_01}
 event1=PerilGhostlyBooks02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMajor mythosLibrary
 
 [PerilGhostlyBooks02]
 text={ffg:MYTHOS_EVENT_GHOSTLY_BOOKS_02}
 event1=
 button1="Continue"
 
+; rank 1.5
 [PerilGrassyKnoll01]
 text={ffg:MYTHOS_EVENT_GRASSY_KNOLL_01}
 event1=PerilGrassyKnoll02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMinor mythosOutdoors
 
 [PerilGrassyKnoll02]
 text={ffg:MYTHOS_EVENT_GRASSY_KNOLL_02}
 event1=
 button1="Continue"
 
+; rank 7
 [PerilGravityCheck01]
 text={ffg:MYTHOS_EVENT_GRAVITY_CHECK_01}
 event1=PerilGravityCheck02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosDeadly mythosOutdoors
 
 [PerilGravityCheck02]
 text={ffg:MYTHOS_EVENT_GRAVITY_CHECK_02}
 event1=
 button1="Continue"
 
+; rank 0.7
 [PerilGrossSlime01]
 text={ffg:MYTHOS_EVENT_GROSS_SLIME_01}
 event1=PerilGrossSlime02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMinor
 
 [PerilGrossSlime02]
 text={ffg:MYTHOS_EVENT_GROSS_SLIME_02}
 event1=
 button1="Continue"
 
+; rank 1.05
 [PerilGrossSmell01]
 text={ffg:MYTHOS_EVENT_GROSS_SMELL_01}
 event1=PerilGrossSmell02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMinor mythosOutdoors
 
 [PerilGrossSmell02]
 text={ffg:MYTHOS_EVENT_GROSS_SMELL_02}
 event1=
 button1="Continue"
 
+; rank 3
 [PerilGrowingOld]
 text={ffg:MYTHOS_EVENT_GROWING_OLD}
-flags=mythos
+flags=mythosMajor
 event1=
 button1="Continue"
 
+; rank 2.1
 [PerilHallucinationHole01]
 text={ffg:MYTHOS_EVENT_HALLUCINATION_HOLE_01}
 event1=PerilHallucinationHole02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMajor mythosOutdoors
 
 [PerilHallucinationHole02]
 text={ffg:MYTHOS_EVENT_HALLUCINATION_HOLE_02}
 event1=
 button1="Continue"
 
+; rank 9
 [PerilHardRain01]
 text={ffg:MYTHOS_EVENT_HARD_RAIN_01}
 event1=PerilHardRain02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosDeadly mythosOutdoors
 
 [PerilHardRain02]
 text={ffg:MYTHOS_EVENT_HARD_RAIN_02}
 event1=
 button1="Continue"
 
+; rank 3.5
 [PerilHeatShimmerGlow]
 text={ffg:MYTHOS_EVENT_HEAT_SHIMMER_GLOW}
-flags=mythosDeadly
+flags=mythosMajor
 event1=
 button1="Continue"
 
+; rank 1
 [PerilHelloWall]
 text={ffg:MYTHOS_EVENT_HELLO_WALL}
 flags=mythosMinor
 event1=
 button1="Continue"
 
+; rank -1.8
 [PerilHorribleClue]
 text={ffg:MYTHOS_EVENT_HORRIBLE_CLUE}
-flags=mythos
+flags=mythosHelp
 event1=
 button1="Continue"
 
+; rank 0.5
 [PerilHorribleScreech01]
 text={ffg:MYTHOS_EVENT_HORRIBLE_SCREECH_01}
 event1=PerilHorribleScreech02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMinor
 
 [PerilHorribleScreech02]
 text={ffg:MYTHOS_EVENT_HORRIBLE_SCREECH_02}
 event1=
 button1="Continue"
 
+; rank -1
 [PerilHorribleSpell]
 text={ffg:MYTHOS_EVENT_HORRIBLE_SPELL}
-flags=mythos
+flags=mythosHelp mythosUnfinished
 event1=
 button1="Continue"
 
+; rank 5.5
 [PerilHotPotato01]
 text={ffg:MYTHOS_EVENT_HOT_POTATO_01}
 event1=PerilHotPotato02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosDeadly
 
 [PerilHotPotato02]
 text={ffg:MYTHOS_EVENT_HOT_POTATO_02}
 event1=
 button1="Continue"
 
+; rank 3.25
 [PerilHulkOut]
 text={ffg:MYTHOS_EVENT_HULK_OUT}
 flags=mythosMajor
 event1=
 button1="Continue"
 
+; rank -1
 [PerilHungryForWords01]
 text={ffg:MYTHOS_EVENT_HUNGRY_FOR_WORDS_01}
 event1=PerilHungryForWords02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosHelp mythosUnfinished
 
 [PerilHungryForWords02]
 text={ffg:MYTHOS_EVENT_HUNGRY_FOR_WORDS_02}
 event1=
 button1="Continue"
 
+; rank 3.5
 [PerilHungryForWorms]
 text={ffg:MYTHOS_EVENT_HUNGRY_FOR_WORMS}
-flags=mythosMajor
+flags=mythosMajor mythosOutdoors
 event1=
 button1="Continue"
 
+; rank 7.35
 [PerilHungryGrave01]
 text={ffg:MYTHOS_EVENT_HUNGRY_GRAVE_01}
 event1=PerilHungryGrave02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosDeadly mythosOutdoors
 
 [PerilHungryGrave02]
 text={ffg:MYTHOS_EVENT_HUNGRY_GRAVE_02}
 event1=
 button1="Continue"
 
+; rank 1.05
 [PerilImWalkingHere01]
 text={ffg:MYTHOS_EVENT_IM_WALKING_HERE_01}
 event1=PerilImWalkingHere02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMinor mythosStreet
 
 [PerilImWalkingHere02]
 text={ffg:MYTHOS_EVENT_IM_WALKING_HERE_02}
 event1=
 button1="Continue"
 
+; rank 4.5
 [PerilICanSeeForever]
 text={ffg:MYTHOS_EVENT_I_CAN_SEE_FOREVER}
-flags=mythos
+flags=mythosDeadly
 event1=
 button1="Continue"
 
+; rank -1
 [PerilIHaveSeenMyHat01]
 text={ffg:MYTHOS_EVENT_I_HAVE_SEEN_MY_HAT_01}
 event1=PerilIHaveSeenMyHat02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosHelp
 
 [PerilIHaveSeenMyHat02]
 text={ffg:MYTHOS_EVENT_I_HAVE_SEEN_MY_HAT_02}
 event1=
 button1="Continue"
 
-[PerilIaIaTentaclesPhtagn01]
+; rank 6
+[PerilIaIaTentaclesPhtagn01Beach]
 text={ffg:MYTHOS_EVENT_IA_IA_TENTACLES_PHTAGN_01}
 event1=PerilIaIaTentaclesPhtagn02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosDeadly mythosBeach
+
+; rank 6
+[PerilIaIaTentaclesPhtagn01Dock]
+text={ffg:MYTHOS_EVENT_IA_IA_TENTACLES_PHTAGN_01}
+event1=PerilIaIaTentaclesPhtagn02
+button1="Resolve Event"
+event2=
+button2="No Effect"
+flags=mythosDeadly mythosDock
 
 [PerilIaIaTentaclesPhtagn02]
 text={ffg:MYTHOS_EVENT_IA_IA_TENTACLES_PHTAGN_02}
 event1=
 button1="Continue"
 
+; rank 6
 [PerilIchor]
 text={ffg:MYTHOS_EVENT_ICHOR}
-flags=mythos
+flags=mythosDeadly
 event1=
 button1="Continue"
 
+; rank 0.1
 [PerilImSureItsFine]
 text={ffg:MYTHOS_EVENT_IM_SURE_ITS_FINE}
 flags=mythosMinor
 event1=
 button1="Continue"
 
-[PerilInnsmouthLook01]
+; rank 5.5
+[PerilInnsmouthLook01Dock]
 text={ffg:MYTHOS_EVENT_INNSMOUTH_LOOK_01}
 event1=PerilInnsmouthLook02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosDeadly mythosDock
+
+; rank 5.5
+[PerilInnsmouthLook01Beach]
+text={ffg:MYTHOS_EVENT_INNSMOUTH_LOOK_01}
+event1=PerilInnsmouthLook02
+button1="Resolve Event"
+event2=
+button2="No Effect"
+flags=mythosDeadly mythosBeach
+
+; rank 5.5
+[PerilInnsmouthLook01Pier]
+text={ffg:MYTHOS_EVENT_INNSMOUTH_LOOK_01}
+event1=PerilInnsmouthLook02
+button1="Resolve Event"
+event2=
+button2="No Effect"
+flags=mythosDeadly mythosPier
 
 [PerilInnsmouthLook02]
 text={ffg:MYTHOS_EVENT_INNSMOUTH_LOOK_02}
 event1=
 button1="Continue"
 
+; rank 6
 [PerilInsideTornado01]
 text={ffg:MYTHOS_EVENT_INSIDE_TORNADO_01}
 event1=PerilInsideTornado02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosDeadly mythosUnfinished
 
 [PerilInsideTornado02]
 text={ffg:MYTHOS_EVENT_INSIDE_TORNADO_02}
 event1=
 button1="Continue"
 
+; rank -2
 [PerilInvigorated]
 text={ffg:MYTHOS_EVENT_INVIGORATED}
-flags=mythos
+flags=mythosHelp
 event1=
 button1="Continue"
 
+; rank 7.35
 [PerilInvisibleWeight01]
 text={ffg:MYTHOS_EVENT_INVISIBLE_WEIGHT_01}
 event1=PerilInvisibleWeight02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosDeadly
 
 [PerilInvisibleWeight02]
 text={ffg:MYTHOS_EVENT_INVISIBLE_WEIGHT_02}
 event1=
 button1="Continue"
 
+; rank 1
 [PerilIronCurse]
 text={ffg:MYTHOS_EVENT_IRON_CURSE}
-flags=mythos
+flags=mythosMinor
 event1=
 button1="Continue"
 
+; rank 0.9
 [PerilIsThisTheRealLife]
 text={ffg:MYTHOS_EVENT_IS_THIS_THE_REAL_LIFE}
-flags=mythos
+flags=mythosMinor
 event1=
 button1="Continue"
 
+; rank 4.6
 [PerilItHadToBeSpiders]
 text={ffg:MYTHOS_EVENT_IT_HAD_TO_BE_SPIDERS}
-flags=mythos
+flags=mythosDeadly
 event1=
 button1="Continue"
 
+; rank 3
 [PerilItsATrap01]
 text={ffg:MYTHOS_EVENT_ITS_A_TRAP_01}
 event1=PerilItsATrap02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMajor mythosOutdoors
 
 [PerilItsATrap02]
 text={ffg:MYTHOS_EVENT_ITS_A_TRAP_02}
 event1=
 button1="Continue"
 
+; rank 1.5
 [PerilItsThatDreamAgain]
 text={ffg:MYTHOS_EVENT_ITS_THAT_DREAM_AGAIN}
-flags=mythos
+flags=mythosMinor
 event1=
 button1="Continue"
 
