--- a/content/MoM/base/mythos.ini
+++ b/content/MoM/base/mythos.ini
@@ -1004,433 +1004,561 @@ flags=mythosMinor
 event1=
 button1="Continue"
 
+; rank 1
 [PerilJumpScare]
 text={ffg:MYTHOS_EVENT_JUMP_SCARE}
-flags=mythos
+flags=mythosMinor
 event1=
 button1="Continue"
 
+; rank 6.6
 [PerilJustAFleshWound]
 text={ffg:MYTHOS_EVENT_JUST_A_FLESH_WOUND}
-flags=mythos
+flags=mythosDeadly
 event1=
 button1="Continue"
 
+; rank 1
 [PerilJustWrong01]
 text={ffg:MYTHOS_EVENT_JUST_WRONG_01}
 event1=PerilJustWrong02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMinor
 
 [PerilJustWrong02]
 text={ffg:MYTHOS_EVENT_JUST_WRONG_02}
 event1=
 button1="Continue"
 
+; rank 2.1
 [PerilKnockKnock01]
 text={ffg:MYTHOS_EVENT_KNOCK_KNOCK_01}
 event1=PerilKnockKnock02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMajor
 
 [PerilKnockKnock02]
 text={ffg:MYTHOS_EVENT_KNOCK_KNOCK_02}
 event1=
 button1="Continue"
 
+; rank 4
 [PerilLanternFire]
 text={ffg:MYTHOS_EVENT_LANTERN_FIRE}
-flags=mythos
+flags=mythosDeadly mythosUnfinished
 event1=
 button1="Continue"
 
+; rank 3
 [PerilLivingDarkness01]
 text={ffg:MYTHOS_EVENT_LIVING_DARKNESS_01}
 event1=PerilLivingDarkness02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMajor mythosDarkness
 
 [PerilLivingDarkness02]
 text={ffg:MYTHOS_EVENT_LIVING_DARKNESS_02}
 event1=
 button1="Continue"
 
+; rank 4
 [PerilLivingFire01]
 text={ffg:MYTHOS_EVENT_LIVING_FIRE_01}
 event1=PerilLivingFire02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosDeadly #fire
 
 [PerilLivingFire02]
 text={ffg:MYTHOS_EVENT_LIVING_FIRE_02}
 event1=
 button1="Continue"
 
+; rank 3
 [PerilLongWorkDay]
 text={ffg:MYTHOS_EVENT_LONG_WORK_DAY}
-flags=mythos
+flags=mythosMajor
 event1=
 button1="Continue"
 
+; rank 1.75
 [PerilLooseFloorboard]
 text={ffg:MYTHOS_EVENT_LOOSE_FLOORBOARD}
-flags=mythos
+flags=mythosMinor
 event1=
 button1="Continue"
 
+; rank -2
 [PerilLoversQuarrel01]
 text={ffg:MYTHOS_EVENT_LOVERS_QUARREL_01}
 event1=PerilLoversQuarrel02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosHelp mythosUnfinished
 
 [PerilLoversQuarrel02]
 text={ffg:MYTHOS_EVENT_LOVERS_QUARREL_02}
 event1=
 button1="Continue"
 
+; rank 3
 [PerilLowGradeManufacturing]
 text={ffg:MYTHOS_EVENT_LOW_GRADE_MANUFACTURING}
-flags=mythos
+flags=mythosMajor mythosDiscardItem
 event1=
 button1="Continue"
 
+; rank 5.1
 [PerilLunacy01]
 text={ffg:MYTHOS_EVENT_LUNACY_01}
 event1=PerilLunacy02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosDeadly mythosOutdoors
 
 [PerilLunacy02]
 text={ffg:MYTHOS_EVENT_LUNACY_02}
 event1=
 button1="Continue"
 
+; rank 5.1
 [PerilMadmansDrum01]
 text={ffg:MYTHOS_EVENT_MADMANS_DRUM_01}
 event1=PerilMadmansDrum02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosDeadly mythosOutdoors
 
 [PerilMadmansDrum02]
 text={ffg:MYTHOS_EVENT_MADMANS_DRUM_02}
 event1=
 button1="Continue"
 
+; rank 1.4
 [PerilMadmenInTheWalls01]
 text={ffg:MYTHOS_EVENT_MADMEN_IN_THE_WALLS_01}
 event1=PerilMadmenInTheWalls02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMinor
 
 [PerilMadmenInTheWalls02]
 text={ffg:MYTHOS_EVENT_MADMEN_IN_THE_WALLS_02}
 event1=
 button1="Continue"
 
-[PerilManhole01]
+; rank 2.2
+[PerilManhole01Alley]
 text={ffg:MYTHOS_EVENT_MANHOLE_01}
 event1=PerilManhole02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMajor mythosAlley
+
+; rank 2.2
+[PerilManhole01Street]
+text={ffg:MYTHOS_EVENT_MANHOLE_01}
+event1=PerilManhole02
+button1="Resolve Event"
+event2=
+button2="No Effect"
+flags=mythosMajor mythosStreet
 
 [PerilManhole02]
 text={ffg:MYTHOS_EVENT_MANHOLE_02}
 event1=
 button1="Continue"
 
+; rank 2.4
 [PerilMania01]
 text={ffg:MYTHOS_EVENT_MANIA_01}
 event1=PerilMania02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMajor
 
 [PerilMania02]
 text={ffg:MYTHOS_EVENT_MANIA_02}
 event1=
 button1="Continue"
 
+; rank 3
 [PerilMarsNeedsInvestigators01]
 text={ffg:MYTHOS_EVENT_MARS_NEEDS_INVESTIGATORS_01}
 event1=PerilMarsNeedsInvestigators02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMajor mythosOutdoors
 
 [PerilMarsNeedsInvestigators02]
 text={ffg:MYTHOS_EVENT_MARS_NEEDS_INVESTIGATORS_02}
 event1=
 button1="Continue"
 
+; rank 6
 [PerilMeteor01]
 text={ffg:MYTHOS_EVENT_METEOR_01}
 event1=PerilMeteor02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosDeadly mythosOutdoors mythosUnfinished
 
 [PerilMeteor02]
 text={ffg:MYTHOS_EVENT_METEOR_02}
 event1=
 button1="Continue"
 
+; rank 0.5
 [PerilMidasSong01]
 text={ffg:MYTHOS_EVENT_MIDAS_SONG_01}
 event1=PerilMidasSong02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMinor
 
 [PerilMidasSong02]
 text={ffg:MYTHOS_EVENT_MIDAS_SONG_02}
 event1=
 button1="Continue"
 
+; rank 0.75
 [PerilMigraine]
 text={ffg:MYTHOS_EVENT_MIGRAINE}
-flags=mythos
+flags=mythosMinor
 event1=
 button1="Continue"
 
+;rank 3.6
 [PerilMonophobia]
 text={ffg:MYTHOS_EVENT_MONOPHOBIA}
-flags=mythos
+flags=mythosMajor mythosOutdoors
 event1=
 button1="Continue"
 
 [PerilMoonlight]
 text={ffg:MYTHOS_EVENT_MOONLIGHT}
-flags=mythos
+flags=mythosFlavor
 event1=
 button1="Continue"
 
-[PerilMouthlessMob]
+; rank 7.2
+[PerilMouthlessMobStreet]
 text={ffg:MYTHOS_EVENT_MOUTHLESS_MOB}
-flags=mythos
+flags=mythosDeadly mythosStreet
 event1=
 button1="Continue"
 
+; rank 7.2
+[PerilMouthlessMobStreetCorner]
+text={ffg:MYTHOS_EVENT_MOUTHLESS_MOB}
+flags=mythosDeadly mythosStreetCorner
+event1=
+button1="Continue"
+
+; rank 9
 [PerilMutation]
 text={ffg:MYTHOS_EVENT_MUTATION}
-flags=mythos
+flags=mythosDeadly
 event1=
 button1="Continue"
 
+; rank 1.5
 [PerilNausea]
 text={ffg:MYTHOS_EVENT_NAUSEA}
-flags=mythos
+flags=mythosMinor
 event1=
 button1="Continue"
 
+; rank -1
 [PerilNoExcuse]
 text={ffg:MYTHOS_EVENT_NO_EXCUSE}
-flags=mythos
+flags=mythosHelp
 event1=
 button1="Continue"
 
+; rank 2
 [PerilNoReflection01]
 text={ffg:MYTHOS_EVENT_NO_REFLECTION_01}
 event1=PerilNoReflection02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMajor mythosBathroom
 
 [PerilNoReflection02]
 text={ffg:MYTHOS_EVENT_NO_REFLECTION_02}
 event1=
 button1="Continue"
 
+; rank 2
 [PerilNotAllergies]
 text={ffg:MYTHOS_EVENT_NOT_ALLERGIES}
-flags=mythos
+flags=mythosMajor
 event1=
 button1="Continue"
 
+; rank 4
 [PerilNotClouds]
 text={ffg:MYTHOS_EVENT_NOT_CLOUDS}
-flags=mythos
+flags=mythosDeadly mythosUnfinished
 event1=
 button1="Continue"
 
+; rank 4
 [PerilNowWereCooking]
 text={ffg:MYTHOS_EVENT_NOW_WERE_COOKING}
-flags=mythos
+flags=mythosDeadly mythosKitchen
 event1=
 button1="Continue"
 
-[PerilOcean]
+[PerilOceanBeach]
 text={ffg:MYTHOS_EVENT_OCEAN}
-flags=mythos
+flags=mythosFlavor mythosBeach
 event1=
 button1="Continue"
 
-[PerilOilSpill01]
+[PerilOceanDock]
+text={ffg:MYTHOS_EVENT_OCEAN}
+flags=mythosFlavor mythosDock
+event1=
+button1="Continue"
+
+[PerilOceanPier]
+text={ffg:MYTHOS_EVENT_OCEAN}
+flags=mythosFlavor mythosPier
+event1=
+button1="Continue"
+
+; rank 3.5
+[PerilOilSpill01Beach]
 text={ffg:MYTHOS_EVENT_OIL_SPILL_01}
 event1=PerilOilSpill02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMajor mythosBeach
+
+; rank 3.5
+[PerilOilSpill01Dock]
+text={ffg:MYTHOS_EVENT_OIL_SPILL_01}
+event1=PerilOilSpill02
+button1="Resolve Event"
+event2=
+button2="No Effect"
+flags=mythosMajor mythosDock
+
+; rank 3.5
+[PerilOilSpill01Pier]
+text={ffg:MYTHOS_EVENT_OIL_SPILL_01}
+event1=PerilOilSpill02
+button1="Resolve Event"
+event2=
+button2="No Effect"
+flags=mythosMajor mythosPier
 
 [PerilOilSpill02]
 text={ffg:MYTHOS_EVENT_OIL_SPILL_02}
 event1=
 button1="Continue"
 
+; rank 6.5
 [PerilOldBones]
 text={ffg:MYTHOS_EVENT_OLD_BONES}
-flags=mythos
+flags=mythosDeadly
 event1=
 button1="Continue"
 
+; rank 0.1
 [PerilOldManLeg]
 text={ffg:MYTHOS_EVENT_OLD_MAN_LEG}
-flags=mythos
+flags=mythosMinor
 event1=
 button1="Continue"
 
+; rank 0.5
 [PerilOpenYourEyes01]
 text={ffg:MYTHOS_EVENT_OPEN_YOUR_EYES_01}
 event1=PerilOpenYourEyes02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMinor
 
 [PerilOpenYourEyes02]
 text={ffg:MYTHOS_EVENT_OPEN_YOUR_EYES_02}
 event1=
 button1="Continue"
 
+; rank 4
 [PerilPersonalCyclone01]
 text={ffg:MYTHOS_EVENT_PERSONAL_CYCLONE_01}
 event1=PerilPersonalCyclone02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosDeadly mythosOutdoors
 
 [PerilPersonalCyclone02]
 text={ffg:MYTHOS_EVENT_PERSONAL_CYCLONE_02}
 event1=
 button1="Continue"
 
+; rank 0.7
 [PerilPieJesuDomine01]
 text={ffg:MYTHOS_EVENT_PIE_JESU_DOMINE_01}
 event1=PerilPieJesuDomine02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMinor
 
 [PerilPieJesuDomine02]
 text={ffg:MYTHOS_EVENT_PIE_JESU_DOMINE_02}
 event1=
 button1="Continue"
 
+; rank 2.2
 [PerilPiping]
 text={ffg:MYTHOS_EVENT_PIPING}
-flags=mythos
+flags=mythosMajor
 event1=
 button1="Continue"
 
+; rank 2.25
 [PerilPitTrap01]
 text={ffg:MYTHOS_EVENT_PIT_TRAP_01}
 event1=PerilPitTrap02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMajor mythosOutdoors
 
 [PerilPitTrap02]
 text={ffg:MYTHOS_EVENT_PIT_TRAP_02}
 event1=
 button1="Continue"
 
+; rank 2.5
 [PerilPlagueMosquito]
 text={ffg:MYTHOS_EVENT_PLAGUE_MOSQUITO}
-flags=mythos
+flags=mythosMajor
 event1=
 button1="Continue"
 
+; rank 4
 [PerilPlungedIntoDarkness]
 text={ffg:MYTHOS_EVENT_PLUNGED_INTO_DARKNESS}
-flags=mythos
+flags=mythosDeadly mythosUnfinished
 event1=
 button1="Continue"
 
-[PerilPoltergeist01]
+; rank 1.25
+[PerilPoltergeist01Hall]
 text={ffg:MYTHOS_EVENT_POLTERGEIST_01}
 event1=PerilPoltergeist02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMinor mythosHall
+
+; rank 1.25
+[PerilPoltergeist01Office]
+text={ffg:MYTHOS_EVENT_POLTERGEIST_01}
+event1=PerilPoltergeist02
+button1="Resolve Event"
+event2=
+button2="No Effect"
+flags=mythosMinor mythosOffice
+
+; rank 1.25
+[PerilPoltergeist01Study]
+text={ffg:MYTHOS_EVENT_POLTERGEIST_01}
+event1=PerilPoltergeist02
+button1="Resolve Event"
+event2=
+button2="No Effect"
+flags=mythosMinor mythosStudy
 
 [PerilPoltergeist02]
 text={ffg:MYTHOS_EVENT_POLTERGEIST_02}
 event1=
 button1="Continue"
 
+; rank 0.5
 [PerilPopItBackIn01]
 text={ffg:MYTHOS_EVENT_POP_IT_BACK_IN_01}
 event1=PerilPopItBackIn02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMinor
 
 [PerilPopItBackIn02]
 text={ffg:MYTHOS_EVENT_POP_IT_BACK_IN_02}
 event1=
 button1="Continue"
 
-[PerilPortraitOfGray01]
+; rank 3.85
+[PerilPortraitOfGray01Hall]
 text={ffg:MYTHOS_EVENT_PORTRAIT_OF_GRAY_01}
 event1=PerilPortraitOfGray02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMajor mythosHall
+
+
+; rank 3.85
+[PerilPortraitOfGray01Office]
+text={ffg:MYTHOS_EVENT_PORTRAIT_OF_GRAY_01}
+event1=PerilPortraitOfGray02
+button1="Resolve Event"
+event2=
+button2="No Effect"
+flags=mythosMajor mythosOffice
+
+
+; rank 3.85
+[PerilPortraitOfGray01Study]
+text={ffg:MYTHOS_EVENT_PORTRAIT_OF_GRAY_01}
+event1=PerilPortraitOfGray02
+button1="Resolve Event"
+event2=
+button2="No Effect"
+flags=mythosMajor mythosStudy
 
 [PerilPortraitOfGray02]
 text={ffg:MYTHOS_EVENT_PORTRAIT_OF_GRAY_02}
 event1=
 button1="Continue"
 
+; rank 2.5
 [PerilPtsd]
 text={ffg:MYTHOS_EVENT_PTSD}
-flags=mythos
+flags=mythosMajor
 event1=
 button1="Continue"
 
+; rank 3.6
 [PerilPuppetMaster]
 text={ffg:MYTHOS_EVENT_PUPPET_MASTER}
-flags=mythos
+flags=mythosMajor
 event1=
 button1="Continue"
 
